--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <link id="link_34" rel="import" href="slides/slide_34.html">
     <link id="link_35" rel="import" href="slides/slide_35.html">
     <link id="link_36" rel="import" href="slides/slide_36.html">
+    <link id="link_37" rel="import" href="slides/slide_37.html">
 
     <!-- Printing and PDF exports -->
     <script>
@@ -115,8 +116,9 @@
         <section id="slide_32"></section>
         <section id="slide_33"></section>
         <section id="slide_34"></section>
-        <section id="slide_35"></section>
+        <section id="slide_35" data-background="#fdfdfd"></section>
         <section id="slide_36"></section>
+        <section id="slide_37"></section>
         <!--<section id="vertical">-->
 
         <!--</section>-->
@@ -130,7 +132,7 @@
 
     // Load my slides
     window.addEventListener('WebComponentsReady', function() {
-        for (let i = 1; i < 37; i++) {
+        for (let i = 1; i < 38; i++) {
             console.log(i);
             let index = i.toString();
             if (i < 10) index = '0' + i;
