--- a/slides/slide_35.html
+++ b/slides/slide_35.html
@@ -1,22 +1,11 @@
-<div id="s_35">
-  <h4>-the end-</h4>
-  <div class="final-container">
-  <div class="left">
-      <img class="fragment" data-fragment-index="1" src="./images/summer.jpg" width="100%"/>
-  </div>
-  <div class="right fragment" data-fragment-index="2">
-      <p>
-          Katerina Skroumpelou
-      </p>
-      <p class="notes">Upstream, Greece</p>
-      <p><a href="https://twitter.com/psybercity" class="twitter-blue" target="_blank">@psybercity</a></p>
-      <p><a href="https://github.com/mandarini" target="_blank">github.com/mandarini</a></p>
-      <p>Slides: <a href="https://mandarini.github.io/VoxxedAthens" target="_blank">https://mandarini.github.io/VoxxedAthens</a></p>
-      <p>Code from presentation:<br/>
-          <a href="https://github.com/mandarini/m" target="_blank">https://github.com/mandarini/m</a><br/>
-          <a href="https://github.com/mandarini/im" target="_blank">https://github.com/mandarini/im</a><br/>
-          <a href="https://github.com/mandarini/wsserver" target="_blank">https://github.com/mandarini/wsserver</a>
-      </p>
-  </div>
-  </div>
+<div id="s_35" class="white-bg">
+  <h4>not quite :)</h4>
+  <h5 class="fragment"><a style="color:red;" href="https://www.meetup.com/Angular-Athens/" rel="noopener">Angular Athens</a></h5>
+  <img class="fragment" data-fragment-index="1" src="./images/angulara.png" width="30%"/>
+  <p class="fragment">
+    your local Angular meetup!
+  </p>
+  <p class="fragment">
+    follow us on twitter <a style="color:red;" href="https://twitter.com/AthensAngular" rel="noopener">@AthensAngular</a>
+  </p>
 </div>
