--- a/slides/slide_36.html
+++ b/slides/slide_36.html
@@ -1,21 +1,22 @@
 <div id="s_36">
-  <h4>credit - sources</h4>
+  <h4>-the end-</h4>
+  <div class="final-container">
   <div class="left">
-      <img src="./images/ngcat.jpg" width="100%"/>
+      <img class="fragment" data-fragment-index="1" src="./images/summer.jpg" width="100%"/>
   </div>
-  <div class="right">
-<ul class="final-list">
-  <li><a href="https://socket.io/" target="_blank" rel="noopener">Socket.io</a></li>
-  <li><a href="https://developers.google.com/web/fundamentals/native-hardware/device-orientation/" target="_blank" rel="noopener">
-      Device Orientation & Motion By Pete LePage</a></li>
-  <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceMotionEvent" target="_blank" rel="noopener">DeviceMotionEvent Specs</a></li>
-  <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceOrientationEvent" target="_blank" rel="noopener">DeviceOrientationEvent Specs</a></li>
-  <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceLightEvent" target="_blank" rel="noopener">DeviceLightEvent Specs</a></li>
-  <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceProximityEvent" target="_blank" rel="noopener">DeviceProximityEvent Specs</a></li>
-  <li><a href="https://w3c.github.io/deviceorientation/spec-source-orientation.html" target="_blank" rel="noopener">W3C DeviceOrientation Event Specification</a></li>
-  <li><a href="https://davidwalsh.name/websocket" target="_blank" rel="noopener">WebSockets and Socket.IO</a></li>
-  <li><a href="https://tutorialedge.net/typescript/angular/angular-socket-io-tutorial/" target="_blank" rel="noopener">Angular and Socket.io tutorial</a>
-      by <a href="https://twitter.com/Elliot_F" target="_blank" rel="noopener">Elliot Forbes</a></li>
-</ul>
-</div>
+  <div class="right fragment" data-fragment-index="2">
+      <p>
+          Katerina Skroumpelou
+      </p>
+      <p class="notes">Upstream, Greece</p>
+      <p><a href="https://twitter.com/psybercity" class="twitter-blue" target="_blank">@psybercity</a></p>
+      <p><a href="https://github.com/mandarini" target="_blank">github.com/mandarini</a></p>
+      <p>Slides: <a href="https://mandarini.github.io/VoxxedAthens" target="_blank">https://mandarini.github.io/VoxxedAthens</a></p>
+      <p>Code from presentation:<br/>
+          <a href="https://github.com/mandarini/m" target="_blank">https://github.com/mandarini/m</a><br/>
+          <a href="https://github.com/mandarini/im" target="_blank">https://github.com/mandarini/im</a><br/>
+          <a href="https://github.com/mandarini/wsserver" target="_blank">https://github.com/mandarini/wsserver</a>
+      </p>
+  </div>
+  </div>
 </div>
